3주차 코드리뷰 gap 수정까지 반영

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="style.css" />
     <!-- css 링크 -->
-    <meta property="og:image" content="/img/coding.jpg" />
+    <meta property="og:image" content="img/coding.jpg" />
     <meta property="og:title" content="Linkbrary" />
     <meta
       property="og:description"
@@ -16,7 +16,7 @@
     <meta property="og:url" content="https://www.linkbrary.kr" />
     <!-- 페이스북 meta tags -->
     <meta name="twitter:card" content="summary_large_image" />
-    <meta name="twitter:image" content="/img/coding.jpg" />
+    <meta name="twitter:image" content="img/coding.jpg" />
     <meta name="twitter:title" content="Linkbrary" />
     <meta
       name="twitter:description"
@@ -27,12 +27,10 @@
   <body>
     <header class="header">
       <div class="header_div">
-        <a href="index.html"
-          ><img src="img/logo.svg" alt="Linkbrary" width="133px" height="24px"
+        <a class="img-link" href="index.html"
+          ><img src="img/logo.svg" alt="Linkbrary" width="133" height="24"
         /></a>
-        <a href="signin/signin.html"
-          ><button class="header_btn" type="button">로그인</button></a
-        >
+        <a class="header_btn" href="signin/signin.html">로그인</a>
       </div>
     </header>
     <main>
@@ -44,17 +42,13 @@
           쉽게 저장하고<br class="tablet_br mobile_br" />
           관리해 보세요
         </h1>
-        <a href="/signup/signup.html"
-          ><button class="main_section_btn" type="button">
-            링크 추가하기
-          </button></a
-        >
+        <a class="main_section_btn" href="/signup/signup.html">링크 추가하기</a>
         <img
           class="main_section_img"
           src="img/image_box1.png"
           alt="서비스 소개"
-          width="1118px"
-          height="537px"
+          width="1118"
+          height="537"
         />
       </section>
       <section class="section_boxs">
@@ -79,8 +73,8 @@
             class="imgs"
             src="img/image_box2.png"
             alt="링크 기능"
-            width="550px"
-            height="450px"
+            width="550"
+            height="450"
           />
         </div>
 
@@ -89,8 +83,8 @@
             class="imgs mobile_order"
             src="img/image_box3.png"
             alt="폴더 이름 변경하기"
-            width="414px"
-            height="270px"
+            width="414"
+            height="270"
           />
           <div>
             <h2 class="flex_box_text">
@@ -124,8 +118,8 @@
             class="imgs"
             src="img/image_box4.png"
             alt="폴더 공유하기"
-            width="570px"
-            height="469px"
+            width="570"
+            height="469"
           />
         </div>
 
@@ -134,8 +128,8 @@
             class="imgs mobile_order"
             src="img/image_box5.png"
             alt="검색 서비스"
-            width="550px"
-            height="450px"
+            width="550"
+            height="450"
           />
           <div>
             <h2 class="flex_box_text">
@@ -163,24 +157,20 @@
         </div>
         <div class="footer_linkbox">
           <a href="https://www.facebook.com/" target="_blank"
-            ><img
-              src="img/facebook.svg"
-              alt="페이스북"
-              width="20px"
-              height="20px"
+            ><img src="img/facebook.svg" alt="페이스북" width="20" height="20"
           /></a>
           <a href="https://twitter.com/" target="_blank"
-            ><img src="img/twitter.svg" alt="트위터" width="20px" height="20px"
+            ><img src="img/twitter.svg" alt="트위터" width="20" height="20"
           /></a>
           <a href="https://www.youtube.com/" target="_blank"
-            ><img src="img/youtube.svg" alt="유튜브" width="20px" height="20px"
+            ><img src="img/youtube.svg" alt="유튜브" width="20" height="20"
           /></a>
           <a href="https://www.instagram.com/" target="_blank"
             ><img
               src="img/instagram.svg"
               alt="인스타그램"
-              width="20px"
-              height="20px"
+              width="20"
+              height="20"
           /></a>
         </div>
       </div>
