--- a/signup/signup.html
+++ b/signup/signup.html
@@ -9,8 +9,8 @@
   </head>
   <body>
     <header class="title">
-      <a href="../index.html"
-        ><img src="../img/logo.svg" alt="Linkbrary" width="210px" height="38px"
+      <a class="img-link" href="../index.html"
+        ><img src="../img/logo.svg" alt="Linkbrary" width="210" height="38"
       /></a>
       <p class="title_p">
         이미 회원이신가요?<a class="title_link" href="../signin/signin.html"
@@ -45,8 +45,8 @@
             class="absolute"
             src="../img/eye_on.svg"
             alt="비밀번호 보호"
-            width="16px"
-            height="16px"
+            width="16"
+            height="16"
           />
         </div>
         <div class="form_section_div div_margin relative">
@@ -63,8 +63,8 @@
             class="absolute"
             src="../img/eye_on.svg"
             alt="비밀번호 보호"
-            width="16px"
-            height="16px"
+            width="16"
+            height="16"
           />
         </div>
         <button class="button" type="button">회원가입</button>
@@ -74,10 +74,10 @@
       <span clss="footer_text">다른 방식으로 가입하기</span>
       <div class="footer_link">
         <a href="https://www.google.com/" target="_blank"
-          ><img src="../img/google.svg" alt="구글" width="42px" height="42px"
+          ><img src="../img/google.svg" alt="구글" width="42" height="42"
         /></a>
         <a href="https://www.kakaocorp.com/page/" target="_blank"
-          ><img src="../img/kakao.svg" alt="카카오" width="42px" height="42px"
+          ><img src="../img/kakao.svg" alt="카카오" width="42" height="42"
         /></a>
       </div>
     </footer>
