3주차 코드리뷰 이미지 고정크기 제거

--- a/index.html
+++ b/index.html
@@ -64,8 +64,9 @@
               나중에 읽고 싶은 글, 다시 보고 싶은 영상,<br
                 class="desktop_br tablet_br"
               />
-              사고 싶은 옷,<br class="mobile_br" />
-              기억하고 싶은 모든 것을<br class="desktop_br tablet_br" />
+              사고 싶은 옷, 기억하고 싶은 모든 것을<br
+                class="desktop_br tablet_br"
+              />
               한 공간에 저장하세요.
             </p>
           </div>
@@ -93,8 +94,7 @@
             </h2>
             <p class="flex_box_p">
               나만의 폴더를 무제한으로 만들고<br class="desktop_br tablet_br" />
-              다양하게 활용할 수<br class="mobile_br" />
-              있습니다.
+              다양하게 활용할 수 있습니다.
             </p>
           </div>
         </div>
@@ -108,8 +108,7 @@
             <p class="flex_box_p">
               여러 링크를 폴더에 담고 공유할 수<br class="tablet_br" />
               있습니다.<br class="desktop_br" />
-              가족,<br class="mobile_br" />
-              친구, 동료들에게 쉽고<br class="tablet_br" />
+              가족, 친구, 동료들에게 쉽고<br class="tablet_br" />
               빠르게 링크를<br class="desktop_br" />
               공유해 보세요.
             </p>
