3주차 코드리뷰 반영완료

--- a/signin/signin.html
+++ b/signin/signin.html
@@ -51,9 +51,9 @@
         </div>
         <button class="button" type="button">로그인</button>
       </form>
-      <footer class="footer">
-        <span class="footer_span">소셜 로그인</span>
-        <div class="footer_link">
+      <div class="div">
+        <span class="div_span">소셜 로그인</span>
+        <div class="div_link">
           <a href="https://www.google.com/" target="_blank"
             ><img src="../img/google.svg" alt="구글" width="42" height="42"
           /></a>
@@ -61,7 +61,7 @@
             ><img src="../img/kakao.svg" alt="카카오" width="42" height="42"
           /></a>
         </div>
-      </footer>
+      </div>
     </section>
   </body>
 </html>
