--- a/signup/signup.html
+++ b/signup/signup.html
@@ -70,9 +70,9 @@
         <button class="button" type="button">회원가입</button>
       </form>
     </section>
-    <footer class="footer">
-      <span clss="footer_text">다른 방식으로 가입하기</span>
-      <div class="footer_link">
+    <div class="div">
+      <span clss="div_text">다른 방식으로 가입하기</span>
+      <div class="div_link">
         <a href="https://www.google.com/" target="_blank"
           ><img src="../img/google.svg" alt="구글" width="42" height="42"
         /></a>
@@ -80,6 +80,6 @@
           ><img src="../img/kakao.svg" alt="카카오" width="42" height="42"
         /></a>
       </div>
-    </footer>
+    </div>
   </body>
 </html>
