--- a/signin.html
+++ b/signin.html
@@ -23,7 +23,7 @@
       </div>
     </div>
 
-    <!-- <form> -->
+    <form class="login-form">
       <div class="sign-wrap">
         <div class="sign-inner">
           <label class="sign-label" for="email">이메일</label>
@@ -43,7 +43,7 @@
         </div>
       </div> 
       <button class="sign-btn btn-color" type="submit">로그인</button>
-    <!-- </form> -->
+    </form>
   </div>
   
   <div class="social-sign">
