--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         링크 추가하기
       </a>
       <div class="header-wrap__img">
-        <img src="/assets/img/png/mainbg.png" class="header-image" alt="링크 검색 이미지" />
+        <img class="header-image" src="/assets/img/png/mainbg.png" alt="링크 검색 이미지" />
       </div>
     </div>
   </header> 
@@ -59,7 +59,7 @@
         </p>
       </div>
       <div class="card-wrap__img"> 
-        <img src="/assets/img/png/card1.png" class="card-item__img" alt="링크 저장 이미지" />
+        <img class="card-item__img" src="/assets/img/png/card1.png" alt="링크 저장 이미지" />
       </div>
     </section>
 
@@ -78,7 +78,7 @@
         </p>
       </div>
       <div class="card-wrap__img"> 
-        <img src="/assets/img/png/card2.png" class="card-item__img" alt="폴더 관리 팝업창 이미지" />
+        <img class="card-item__img" src="/assets/img/png/card2.png" alt="폴더 관리 팝업창 이미지" />
       </div>
     </section>
 
@@ -99,7 +99,7 @@
         </p>
       </div>
       <div class="card-wrap__img"> 
-        <img src="/assets/img/png/card3.png" class="card-item__img" alt="폴더 공유 팝업창 이미지" />
+        <img class="card-item__img" src="/assets/img/png/card3.png" alt="폴더 공유 팝업창 이미지" />
       </div>
     </section>
 
@@ -116,7 +116,7 @@
         </p>
       </div>
       <div class="card-wrap__img"> 
-        <img src="/assets/img/png/card4.png" class="card-item__img" alt="검색 이미지" />
+        <img class="card-item__img" src="/assets/img/png/card4.png" alt="검색 이미지" />
       </div>
     </section>
   </article>
@@ -127,10 +127,10 @@
         ©codeit - 2023
       </span>
       <div class="footer-item__link">
-        <a href="/privacy.html" class="footer-item__font">
+        <a class="footer-item__font" href="/privacy.html">
           Privacy Policy
         </a>
-        <a href="/faq.html" class="footer-item__font">
+        <a class="footer-item__font" href="/faq.html">
           FAQ
         </a>
       </div>
