--- a/signup.html
+++ b/signup.html
@@ -15,36 +15,36 @@
       </a>
       <div class="header-logo__line">
         <p class="header-logo__text">이미 회원이신가요?</p>
-        <a href="/signin.html" class="header-logo__link">로그인 하기</a>
+        <a class="header-logo__link" href="/signin.html">로그인 하기</a>
       </div>
     </div>
 
     <form>
       <div class="sign-wrap">
         <div class="sign-inner">
-          <label for="email" class="sign-label">이메일</label>
-          <input type="email" class="sign-input" name="email" /> 
+          <label class="sign-label" for="email">이메일</label>
+          <input class="sign-input" type="email" name="email" /> 
         </div>
         <div class="sign-inner">
-          <label for="password" class="sign-label">비밀번호</label>
+          <label class="sign-label" for="password">비밀번호</label>
           <div class="sign-pw">
-            <input type="password" class="sign-input" name="pw" />
+            <input class="sign-input" type="password" name="pw" />
             <button class="sign-pw__eye-btn"> 
               <img src="/assets/img/svg/eye-off.svg" alt="비밀번호 감추기" />
             </button>
           </div>
         </div>
         <div class="sign-inner">
-          <label for="password" class="sign-label">비밀번호 확인</label>
+          <label class="sign-label" for="password">비밀번호 확인</label>
           <div class="sign-pw">
-            <input type="password" class="sign-input" name="pw" />
+            <input class="sign-input" type="password" name="pw" />
             <button class="sign-pw__eye-btn">  
               <img src="/assets/img/svg/eye-off.svg" alt="비밀번호 감추기" />
             </button>
           </div>
         </div>
       </div>
-      <button type="submit" class="sign-btn btn-color">회원가입</button>
+      <button class="sign-btn btn-color" type="submit">회원가입</button>
     </form>
   </div>
 
@@ -53,12 +53,12 @@
     <div class="social-sign__inner">
       <a href="https://www.google.com/">
         <div class="social-sign__icon">
-          <img src="/assets/img/svg/social-icon-google.png" class="social-sign__icon-img" alt="google로 로그인하기" />
+          <img class="social-sign__icon-img" src="/assets/img/svg/social-icon-google.png" alt="google로 로그인하기" />
         </div>
       </a>
       <a href="https://www.kakaocorp.com/page/">
         <div class="social-sign__icon">
-          <img src="/assets/img/svg/social-icon-kakao.png" class="social-sign__icon-img" alt="kakao로 로그인하기" />
+          <img class="social-sign__icon-img" src="/assets/img/svg/social-icon-kakao.png" alt="kakao로 로그인하기" />
         </div>
       </a>
     </div>
