4주차 위클리 미션 미완성

--- a/signin/signin.html
+++ b/signin/signin.html
@@ -30,6 +30,7 @@
             placeholder="codeit@codeit.com"
             required
           />
+          <p id="email-error"></p>
         </div>
         <div class="form_section_div div_margin relative">
           <label class="label" for="password">비밀번호</label>
@@ -48,6 +49,7 @@
             width="16"
             height="16"
           />
+          <p id="password-error"></p>
         </div>
         <button class="button" type="button">로그인</button>
       </form>
@@ -63,5 +65,6 @@
         </div>
       </div>
     </section>
+    <script src="signin.js"></script>
   </body>
 </html>
