--- a/signup.html
+++ b/signup.html
@@ -41,7 +41,7 @@
               <input class="pwd-input error-border" value="" type="password">       
             </label>
             <button class="pwd-eye-off">
-              <img src="images/eye-off.svg" alt="eye-off">
+              <img id="eyeOnOff" src="images/eye-off.svg" alt="eye-off">
             </button>
             <p class="error-msg pwd-blank-error">비밀번호를 입력해주세요</p>
             <p class="error-msg check-pwd hide">비밀번호를 확인해주세요</p>
