feat: Add password toggle button function in signup page

--- a/Linkbrary/src/signin.html
+++ b/Linkbrary/src/signin.html
@@ -56,7 +56,7 @@
             </div>
         </div>
     </main>
-    <script type="module" src="js/auth.js"></script>
+    <script type="module" src="js/signIn.js"></script>
 </body>
 
 </html>
