--- a/Linkbrary/src/signup.html
+++ b/Linkbrary/src/signup.html
@@ -33,18 +33,20 @@
                     <label for="password">비밀번호</label>
                     <div class="pw-input">
                         <input type="password" id="password" name="password" required class="sign-input">
-                        <button class="pw-toggle-btn">
-                            <img src="img/eye-on.svg" alt="" class="eye-on">
-                        </button>
+                        <div class="pw-toggle-btn">
+                            <img src="img/eye-on.svg" alt="Show Password">
+                            <img src="img/eye-off.svg" alt="Hide Password" class="hidden">
+                        </div>
                     </div>
                 </div>
                 <div class="input-label">
                     <label for="password-check">비밀번호 확인</label>
                     <div class="pw-input">
                         <input type="password" id="password-check" name="password-check" required class="sign-input">
-                        <button class="pw-toggle-btn">
-                            <img src="img/eye-on.svg" alt="" class="eye-on">
-                        </button>
+                        <div class="pw-toggle-btn">
+                            <img src="img/eye-on.svg" alt="Show Password">
+                            <img src="img/eye-off.svg" alt="Hide Password" class="hidden">
+                        </div>
                     </div>
                 </div>
                 <button class="btn login-btn">회원가입</button>
