--- a/Linkbrary/src/signup.html
+++ b/Linkbrary/src/signup.html
@@ -24,7 +24,7 @@
                     <a href="signin.html" class="sign-link">로그인 하기</a>
                 </div>
             </div>
-            <form action="signin.html" method="post" class="sign-form">
+            <form action="signup.html" method="post" class="sign-form" id="sign-up-form">
                 <div class="input-label">
                     <label for="user-email">이메일</label>
                     <input type="email" id="user-email" name="user-email" required class="sign-input">
