head 안태그 수정

--- a/signin.html
+++ b/signin.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/assets/CSS/sign.css">
-  <link rel="stylesheet" href="/assets/css/mobile.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/assets/CSS/sign.css" />
+  <link rel="stylesheet" href="/assets/css/mobile.css" />
   <title>signin</title>
 </head>
 <body class="sign-header-wrap">
@@ -31,14 +31,14 @@
           <label class="sign-label" for="pw">비밀번호</label>
           <div class="sign-pw">
             <input id="input-pw" class="sign-input" type="password" name="pw" />
-            <button class="sign-pw__eye-btn">
+            <button class="sign-pw__eye-btn" type="button">
               <img class="eye-change" src="/assets/img/svg/eye-off.svg" alt="비밀번호 감추기" />
             </button>
           </div>
           <div class="pw-error-message"></div>
         </div>
       </div> 
-      <button class="sign-btn btn-color" type="submit">로그인</button>
+      <button class="sign-btn btn-color" type="button" type="submit">로그인</button>
     </form>
   </div>
   
