--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:url" content="https://linkbrary0304.netlify.app/">
-  <meta property="og:title" content="Linkbrary">
-  <meta property="og:type" content="website">
-  <meta property="og:image" content="/assets/img/png/meta.png">
-  <meta property="og:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요">
-  <link rel="stylesheet" href="/assets/CSS/style.css">
-  <link rel="stylesheet" href="/assets/css/mobile.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta property="og:url" content="https://linkbrary0304.netlify.app/" />
+  <meta property="og:title" content="Linkbrary" />
+  <meta property="og:type" content="website" />
+  <meta property="og:image" content="/assets/img/png/meta.png" />
+  <meta property="og:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요" />
+  <link rel="stylesheet" href="/assets/CSS/style.css" />
+  <link rel="stylesheet" href="/assets/css/mobile.css" />
   <title>Linkbrary</title>
 </head>
 <body>
