--- a/signup.html
+++ b/signup.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
 <html lang="ko">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" href="/assets/CSS/sign.css">
-  <link rel="stylesheet" href="/assets/CSS/mobile.css">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="/assets/CSS/sign.css" />
+  <link rel="stylesheet" href="/assets/CSS/mobile.css" />
   <title>signup</title>
 </head>
 <body class="sign-header-wrap">
@@ -29,7 +29,7 @@
           <label class="sign-label" for="password">비밀번호</label>
           <div class="sign-pw">
             <input class="sign-input" type="password" name="pw" />
-            <button class="sign-pw__eye-btn"> 
+            <button class="sign-pw__eye-btn" type="button"> 
               <img src="/assets/img/svg/eye-off.svg" alt="비밀번호 감추기" />
             </button>
           </div>
@@ -38,13 +38,13 @@
           <label class="sign-label" for="password">비밀번호 확인</label>
           <div class="sign-pw">
             <input class="sign-input" type="password" name="pw" />
-            <button class="sign-pw__eye-btn">  
+            <button class="sign-pw__eye-btn" type="button">  
               <img src="/assets/img/svg/eye-off.svg" alt="비밀번호 감추기" />
             </button>
           </div>
         </div>
       </div>
-      <button class="sign-btn btn-color" type="submit">회원가입</button>
+      <button class="sign-btn btn-color" type="button" type="submit">회원가입</button>
     </form>
   </div>
 
