--- a/Linkbrary/src/signin.html
+++ b/Linkbrary/src/signin.html
@@ -25,11 +25,11 @@
                 </div>
             </div>
             <form action="signin.html" method="post" class="sign-form" id="sign-in-form">
-                <div class="input-label">
+                <div class="input-box">
                     <label for="user-email">이메일</label>
                     <input type="email" id="user-email" name="user-email" required class="sign-input">
                 </div>
-                <div class="input-label">
+                <div class="input-box">
                     <label for="password">비밀번호</label>
                     <div class="pw-input">
                         <input type="password" id="password" name="password" required class="sign-input">
