--- a/Linkbrary/src/signup.html
+++ b/Linkbrary/src/signup.html
@@ -25,11 +25,11 @@
                 </div>
             </div>
             <form action="signup.html" method="post" class="sign-form" id="sign-up-form">
-                <div class="input-label">
+                <div class="input-box">
                     <label for="user-email">이메일</label>
                     <input type="email" id="user-email" name="user-email" required class="sign-input">
                 </div>
-                <div class="input-label">
+                <div class="input-box">
                     <label for="password">비밀번호</label>
                     <div class="pw-input">
                         <input type="password" id="password" name="password" required class="sign-input">
@@ -39,7 +39,7 @@
                         </div>
                     </div>
                 </div>
-                <div class="input-label">
+                <div class="input-box">
                     <label for="password-check">비밀번호 확인</label>
                     <div class="pw-input">
                         <input type="password" id="password-check" name="password-check" required class="sign-input">
