chore: Switch default image to eye-off in password input

--- a/Linkbrary/src/signin.html
+++ b/Linkbrary/src/signin.html
@@ -34,8 +34,8 @@
                     <div class="pw-input">
                         <input type="password" id="password" name="password" required class="sign-input">
                         <div class="pw-toggle-btn">
-                            <img src="img/eye-on.svg" alt="Show Password">
-                            <img src="img/eye-off.svg" alt="Hide Password" class="hidden">
+                            <img src="img/eye-on.svg" alt="Show Password" class="hidden">
+                            <img src="img/eye-off.svg" alt="Hide Password">
                         </div>
                     </div>
                 </div>
