refactor: Create .text-input class and remove redundant input styles

--- a/Linkbrary/src/index.html
+++ b/Linkbrary/src/index.html
@@ -333,7 +333,7 @@
                 <div class="feature-example-image folder-manage-image">
                     <div class="folder-change">
                         <p class="op-font">폴더 이름 변경</p>
-                        <input type="text" name="folder-name" class="folder-input" placeholder="내용 입력">
+                        <input type="text" name="folder-name" class="folder-input text-input" placeholder="내용 입력">
                         <a href="#" class="btn folder-btn">변경하기</a>
                     </div>
                 </div>
