--- a/Linkbrary/src/signin.html
+++ b/Linkbrary/src/signin.html
@@ -27,12 +27,12 @@
             <form action="signin.html" method="post" class="sign-form" id="sign-in-form">
                 <div class="input-box">
                     <label for="user-email">이메일</label>
-                    <input type="email" id="user-email" name="user-email" required class="sign-input">
+                    <input type="email" id="user-email" name="user-email" required class="sign-input text-input">
                 </div>
                 <div class="input-box">
                     <label for="password">비밀번호</label>
                     <div class="pw-input">
-                        <input type="password" id="password" name="password" required class="sign-input">
+                        <input type="password" id="password" name="password" required class="sign-input text-input">
                         <div class="pw-toggle-btn">
                             <img src="img/eye-on.svg" alt="Show Password" class="hidden">
                             <img src="img/eye-off.svg" alt="Hide Password">
