5주차 파일명 추가 변경

--- a/html/signup.html
+++ b/html/signup.html
@@ -29,7 +29,7 @@
                         <label for="password">비밀번호</label>
                         <div class="input-icon-div">
                             <input id="password" name="password" type="password" class="passwordInput">
-                            <button type="button" class="input-icon off">
+                            <button type="button" class="input-icon off passwordIcon">
                                 <img src="../images/icon/eye-off.png" alt="비밀번호 보이기">
                             </button>
                         </div>
@@ -39,7 +39,7 @@
                         <label for="verifyPassword">비밀번호 확인</label>
                         <div class="input-icon-div">
                             <input id="verifyPassword" name="verifyPassword" type="password" class="verifypasswordInput">
-                            <button type="button" class="input-icon off">
+                            <button type="button" class="input-icon off verifyPasswordIcon">
                                 <img src="../images/icon/eye-off.png" alt="비밀번호 보이기">
                             </button>
                         </div>
@@ -65,6 +65,6 @@
             </article>
         </div>
     </div>
-    <script src="../js/signup.js" type="module"></script>
+    <script src="../js/auth/signup.js" type="module"></script>
 </body>
 </html>
