--- a/html/signin.html
+++ b/html/signin.html
@@ -55,6 +55,6 @@
             </article>
         </div>
     </div>
-    <script src="../js/signin.js" type="module"></script>
+    <script src="../js/auth/signin.js" type="module"></script>
 </body>
 </html>
