회원가입 페이지에서 중복 이메일인 경우 에러메시지, input border 구현 완료

--- a/weeklyMission1/signup.html
+++ b/weeklyMission1/signup.html
@@ -21,8 +21,8 @@
         </div>
         <div class="signin-email">
             <p>이메일</p>
-            <input type="email" placeholder="codeit@codeit.com">
-            <div class="error-msg"></div>
+            <input class="signin-email-input signup-email-input" type="email" placeholder="codeit@codeit.com">
+            <div class="email-error-msg"></div>
         </div>
         <div class="signin-password">
             <p>비밀번호</p>
