--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
       content="https://visitbusan.net/uploadImgs/files/cntnts/20211130150754165_wufrotr"
       key="image"
     />
-    <link rel="stylesheet" href="css/index.css" />
+    <link rel="stylesheet" href="./src/index.css" />
   </head>
   <body>
 
