--- a/signin.html
+++ b/signin.html
@@ -8,9 +8,7 @@
       type="text/css"
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
     />
-    <link rel="stylesheet" href="./css/sign.css"/>
-    <script src="js/login.js"></script>
-    <script src="js/passwordView.js"></script>
+    <link rel="stylesheet" href="./src/sign.css"/>
   </head>
 
   <body>
@@ -25,22 +23,21 @@
     </header>
 
     <div class="sign-box">
-      <form class="sign-form" id="loginForm">
+      <form class="sign-form" id="form">
         <div class="sign-inputs">
           <div class="sign-input-box">
             <label class="sign-input-label">이메일</label>
-            <input class="sign-input input-border-default" type="email" id="emailInput"/>
-            <div class="error-message" id="emailError"></div>
+            <input id="email" class="sign-input" />
+            <p id="email-error-message" class="error-message"></p>
           </div>
-
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호</label>
-            <input class="sign-input input-border-default" type="password" id="passwordInput"/>
-            
-              <img src="./image/eye-off.svg" id="eye-off">
-              <img src="./image/eye-on.png" id="eye-on" style="display: none">
-            
-          <div class="password-message" id="passwordError"></div>
+            <input id="password" class="sign-input" type="password" />
+            <p id="password-error-message" class="error-message"></p>
+            <button id="password-toggle" class="eye-button" type="button">
+              <img src="./image/eye-off.svg" />
+            </button>
+          </div>
         </div>
         <button class="cta submit">로그인</button>
       </form>
@@ -58,5 +55,6 @@
       </div>
 
     </div>
+    <script type="module" src="./src/signin.js"></script>
   </body>
 </html>
