--- a/signup.html
+++ b/signup.html
@@ -8,7 +8,7 @@
       type="text/css"
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
     />
-    <link rel="stylesheet" href="./css/sign.css" />
+    <link rel="stylesheet" href="./src/sign.css" />
   </head>
   <body>
 
