비밀번호 유효성 검사 기능 구현 완료

--- a/weeklyMission1/signin.html
+++ b/weeklyMission1/signin.html
@@ -27,7 +27,7 @@
         <div class="signin-password">
             <p>비밀번호</p>
             <input class="signin-password-input" id="signInPw" type="password" placeholder="password">
-            <img src="./img/hidden.svg" class="password-img" alt="closed eye">
+            <img src="./img/hidden.svg" class="password-img" alt="closed-eye">
             <div class="password-error-msg"></div>
         </div>
         <!-- <a href="/"> -->
