--- a/weeklyMission1/signup.html
+++ b/weeklyMission1/signup.html
@@ -22,18 +22,19 @@
         <div class="signin-email">
             <p>이메일</p>
             <input class="signin-email-input signup-email-input" type="email" placeholder="codeit@codeit.com">
-            <div class="email-error-msg"></div>
+            <div class="email-error-msg signup-email-error-msg"></div>
         </div>
         <div class="signin-password">
             <p>비밀번호</p>
-            <input id="signInPw" type="password" placeholder="password">
-            <img src="./img/unhidden.svg" alt="opened eye">
-            <div class="error-msg"></div>
+            <input class="signin-password-input signup-password-input" id="signInPw" type="password" placeholder="password">
+            <img src="./img/unhidden.svg" class="password-img" alt="opened-eye">
+            <div class="password-error-msg"></div>
         </div>
         <div class="signin-password">
             <p>비밀번호확인</p>
-            <input id="signInPw" type="password" placeholder="password">
-            <img src="./img/unhidden.svg" alt="opened eye">
+            <input class="signup-password-check-input" id="signInPw" type="password" placeholder="password">
+            <img src="./img/unhidden.svg" class="password-img-check" alt="opened-eye-second">
+            <div class="password-check-error-msg"></div>
         </div>
         <a href="/">
             <div class="signin-login">
