Replaced codes belongs to error message in signin page

--- a/signin/signin.html
+++ b/signin/signin.html
@@ -32,11 +32,13 @@
         <label class="label" for="username">이메일</label>
         <div class="username-container">
           <input type="text" id="username" class="input" name="username" placeholder="codeit@codeit.kr">
+          <div class="text-error">이메일을 입력해주세요</div>
         </div>
         <label class="label" for="password">비밀번호</label>
         <div class="password-container">
           <input type="password" id="password" class="input" name="password" placeholder="비밀번호">
           <div class="password-toggle eye-slash"></div> 
+          <div class="text-error">비밀번호를 입력해주세요</div>
         </div>
         <input type="button" id="submit" class="btn" value="로그인">
       </form>  
