--- a/signup.html
+++ b/signup.html
@@ -37,7 +37,7 @@
         <div class="sign-inner">
           <label class="sign-label" for="password">비밀번호 확인</label>
           <div class="sign-pw">
-            <input class="sign-input" type="password" name="pw" />
+            <input class="sign-input" type="password" name="pw-check" />
             <button class="sign-pw__eye-btn" type="button">  
               <img src="/assets/img/svg/eye-off.svg" alt="비밀번호 감추기" />
             </button>
