--- a/src/sign/signup.html
+++ b/src/sign/signup.html
@@ -35,7 +35,7 @@
             <div class="input_box">
                 <label for="password">비밀번호 확인</label>
                 <input type="password" id="passwordCheck" placeholder="비밀번호를 입력하세요">
-                <p class="error_msg" id="passwordCheck_error">비밀번호를 다시 입력해 주세요.</p>
+                <p class="error_msg" id="passwordCheck_error"></p>
                 <button class="eye_button" id="eye_toggle2" type="button"></button>
             </div>
         </div>
