회원가입 시 유효성 검사 기능 구현 완료

--- a/weeklyMission1/signup.html
+++ b/weeklyMission1/signup.html
@@ -21,14 +21,14 @@
         </div>
         <div class="signin-email">
             <p>이메일</p>
-            <input class="signin-email-input signup-email-input" type="email" placeholder="codeit@codeit.com">
-            <div class="email-error-msg signup-email-error-msg"></div>
+            <input class="signup-email-input" type="email" placeholder="codeit@codeit.com">
+            <div class="signup-email-error-msg"></div>
         </div>
         <div class="signin-password">
             <p>비밀번호</p>
-            <input class="signin-password-input signup-password-input" id="signInPw" type="password" placeholder="password">
+            <input class="signup-password-input" id="signInPw" type="password" placeholder="password">
             <img src="./img/unhidden.svg" class="password-img" alt="opened-eye">
-            <div class="password-error-msg"></div>
+            <div class="signup-password-error-msg"></div>
         </div>
         <div class="signin-password">
             <p>비밀번호확인</p>
@@ -60,6 +60,6 @@
         </div>
     </div>
 
-    <script src="index.js"></script>
+    <script type="module" src="signup.js"></script>
 </body>
 </html>
