--- a/weeklyMission1/signin.html
+++ b/weeklyMission1/signin.html
@@ -54,6 +54,6 @@
         </div>
     </div>
 
-    <script src="index.js"></script>
+    <script type="module" src="signin.js"></script>
 </body>
 </html>
