fixed: renamed tag names for better readability

--- a/5th_week_mission/signup.html
+++ b/5th_week_mission/signup.html
@@ -21,22 +21,22 @@
           <div class="sign-input-box">
             <label class="sign-input-label">이메일</label>
             <input class="sign-input" name="email" id="email" />
-            <p class="error_msg" id="email_error"></p>
+            <p class="error-msg" id="email-error"></p>
           </div>
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호</label>
             <input class="sign-input" type = "password" name="password" id="password" />
-            <p class="error_msg" id="pwd_error"></p>
+            <p class="error-msg" id="pwd-error"></p>
             <button class="eye-button" type="button" id="showPassword"></button>
           </div>
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호 확인</label>
             <input class="sign-input" type = "password" name="passwordRepeat" id="passwordRepeat" />
-            <p class="error_msg" id="pwdCheckerError"></p>
-            <button class="eye-button" type="button" id="showPassword2"></button>
+            <p class="error-msg" id="pwdCheckerError"></p>
+            <button class="eye-button" type="button" id="showPasswordCheck"></button>
           </div>
         </div>
-        <button class="cta" type="button">회원가입</button>
+        <button class="sign-button" type="button">회원가입</button>
       </form>
       <div class="sns-box">
         <span class="sns-text">다른 방식으로 가입하기</span>
