--- a/5th_week_mission/index.html
+++ b/5th_week_mission/index.html
@@ -37,7 +37,7 @@
         <a href="index.html">
           <img src="./images/logo.svg" alt="홈으로 연결된 Linkbrary 로고" />
         </a>
-        <a class="cta cta-short" href="signin.html">
+        <a class="sign-button sign-button-short" href="signin.html">
           <span>로그인</span>
         </a>
       </div>
@@ -49,7 +49,7 @@
           <br />
           쉽게 저장하고 관리해 보세요
         </h1>
-        <a class="cta cta-long" href="signup.html">
+        <a class="sign-button sign-button-long" href="signup.html">
           <span>링크 추가하기</span>
         </a>
         <img src="./images/hero.png" class="hero-image" alt="Linkbrary 서비스 소개" />
