--- a/5th_week_mission/signin.html
+++ b/5th_week_mission/signin.html
@@ -21,16 +21,16 @@
           <div class="sign-input-box">
             <label class="sign-input-label">이메일</label>
             <input class="sign-input" name="email" id="email" />
-            <p class="error_msg" id="email_error"></p>
+            <p class="error_msg" id="email-error"></p>
           </div>
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호</label>
             <input class="sign-input" type = "password" name="password" id="password"/>
-            <p class="error_msg" id="pwd_error"></p>
+            <p class="error-msg" id="pwd-error"></p>
             <button class="eye-button" type="button" id="showPassword"></button>
           </div>
         </div>
-        <button class="cta" type="button">로그인</button>
+        <button class="sign-button" type="button">로그인</button>
       </form>
       <div class="sns-box">
         <span class="sns-text">소셜 로그인</span>
