refactor: 패스워드 눈 모양 토글 기능 수정

--- a/signin.html
+++ b/signin.html
@@ -34,7 +34,9 @@
             <label class="sign-label" for="pwd">비밀번호</label>
             <input class="input-text" id="pwd" type="password" value="" />
             <span class="error-msg" id="pwd-error-msg"></span>
-            <button class="eye-btn" type="button"></button>
+            <button class="eye-btn" id="pwd-toggle" type="button">
+              <img src="./img/signin/eye-off.svg" alt="eye-off-icon" />
+            </button>
           </div>
         </div>
         <button class="signin-btn" type="submit">로그인</button>
