refactor: 테스트계정 유효 체크값 함수 수정

--- a/signin.html
+++ b/signin.html
@@ -17,7 +17,7 @@
       </div>
     </header>
     <div class="sign-wrap">
-      <form>
+      <form id="form">
         <div class="input-wrap">
           <div class="sign-input">
             <label class="sign-label" for="email">이메일</label>
