--- a/signup.html
+++ b/signup.html
@@ -32,6 +32,10 @@
   <link rel="stylesheet" href="css/common/header.css">
   <link rel="stylesheet" href="css/common/footer.css">
   <link rel="stylesheet" href="css/page/join.css">
+  <script defer src="js/module/join/addErrorMessage.js"></script>
+  <script defer src="js/module/join/removeErrorMassage.js"></script>
+  <script defer src="js/module/join/validation.js"></script>
+  <script defer src="js/module/join/join.js"></script>
   <script defer src="js/signup.js"></script>
   <script defer src="js/password_toggle.js"></script>
 </head>
