signup 버튼 클래스네임 변경

--- a/login/signin.html
+++ b/login/signin.html
@@ -48,7 +48,7 @@
             <p class="form-group__error-message--password"></p>
           </div>
         </div>
-        <button class="cta" type="submit">로그인</button>
+        <button class="form-group__login-button" type="submit">로그인</button>
       </form>
       <div class="sns-box">
         <span class="sns-text">소셜 로그인</span>
