--- a/signup/signup.html
+++ b/signup/signup.html
@@ -13,7 +13,7 @@
       href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css"
     />
 
-    <link rel="stylesheet" href="../login/signin.css" />
+    <link rel="stylesheet" href="./signup.css" />
     <link rel="stylesheet" href="../styles/global.css" />
   </head>
   <body>
@@ -53,7 +53,9 @@
             </button>
           </div>
         </div>
-        <button class="cta" type="submit">회원가입</button>
+        <button class="form-group__signup-button" type="submit">
+          회원가입
+        </button>
       </form>
       <div class="sns-box">
         <span class="sns-text">다른 방식으로 가입하기</span>
