--- a/signin.html
+++ b/signin.html
@@ -6,6 +6,11 @@
     <title>signIn</title>
     <link rel="stylesheet" href="signin.css" />
     <link rel="stylesheet" href="global.css" />
+    <link
+      rel="https://maxcdn.bootstrapcdn.com/font-awesome/4.6.3/css/font-awesome.min.css"
+      rel="stylesheet"
+    />
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   </head>
   <body>
     <main class="section">
@@ -25,7 +30,7 @@
             <input id="email" class="user-input" type="email" name="email" />
             <div id="email-errorText" class="errortext error"></div>
           </div>
-          <div class="input-section">
+          <div class="input-section password__section">
             <div class="text">비밀번호<br /></div>
             <input
               id="password"
@@ -33,9 +38,10 @@
               type="password"
               name="password"
             />
+            <i class="fa fa-eye fa-lg"></i>
             <div id="password-errorText" class="errortext error"></div>
           </div>
-          <button id="loginBtn" class="signin">로그인</button>
+          <button id="login-btn" class="signin">로그인</button>
         </form>
 
         <div class="social">
