로그인 이벤트 click에서 submit로 변경

--- a/signup.html
+++ b/signup.html
@@ -28,7 +28,7 @@
         <div class="sign-inner">
           <label class="sign-label" for="password">비밀번호</label>
           <div class="sign-pw">
-            <input class="sign-input" type="password" name="pw" />
+            <input class="sign-input" type="password" name="password" />
             <button class="sign-pw__eye-btn" type="button"> 
               <img src="/assets/img/svg/eye-off.svg" alt="비밀번호 감추기" />
             </button>
@@ -37,7 +37,7 @@
         <div class="sign-inner">
           <label class="sign-label" for="password">비밀번호 확인</label>
           <div class="sign-pw">
-            <input class="sign-input" type="password" name="pw-check" />
+            <input class="sign-input" type="password" name="password-check" />
             <button class="sign-pw__eye-btn" type="button">  
               <img src="/assets/img/svg/eye-off.svg" alt="비밀번호 감추기" />
             </button>
