--- a/signin.html
+++ b/signin.html
@@ -19,7 +19,7 @@
       </div>
     </div>
 
-    <form class="login-form">
+    <form id="form__inputForm">
       <div class="sign-wrap">
         <div class="sign-inner">
           <label class="sign-label" for="email">이메일</label>
@@ -30,7 +30,7 @@
         <div class="sign-inner">
           <label class="sign-label" for="pw">비밀번호</label>
           <div class="sign-pw">
-            <input id="input-pw" class="sign-input" type="password" name="pw" />
+            <input id="input-pw" class="sign-input" type="password" name="password" />
             <button class="sign-pw__eye-btn" type="button">
               <img class="eye-change" src="/assets/img/svg/eye-off.svg" alt="비밀번호 감추기" />
             </button>
@@ -38,7 +38,7 @@
           <div class="pw-error-message"></div>
         </div>
       </div> 
-      <button class="sign-btn btn-color" type="button" type="submit">로그인</button>
+      <button class="sign-btn btn-color" type="submit">로그인</button>
     </form>
   </div>
   
