refactor: 코드리뷰 수정완료

--- a/signin.html
+++ b/signin.html
@@ -33,8 +33,10 @@
           <label>
             <h4>비밀번호</h4>
             <div class="password-input-group">
-              <input type="password" class="password-input">
-              <img class="icon-eye" src="icon/eye-off.svg">
+              <div class="password-wrappe">
+                <input type="password" class="password-input">
+                <img class="icon-eye" src="icon/eye-off.svg">
+              </div>
               <h6 class="password-input-message"></h6>
             </div>
           </label>
