--- a/5th_week_mission/signin.html
+++ b/5th_week_mission/signin.html
@@ -21,7 +21,7 @@
           <div class="sign-input-box">
             <label class="sign-input-label">이메일</label>
             <input class="sign-input" name="email" id="email" />
-            <p class="error_msg" id="email-error"></p>
+            <p class="error-msg" id="email-error"></p>
           </div>
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호</label>
@@ -44,6 +44,6 @@
         </div>
       </div>
     </div>
-    <script src="signin.js"></script>
+    <script type="module" src="./signin.js"></script>
   </body>
 </html>
