--- a/5th_week_mission/signup.html
+++ b/5th_week_mission/signup.html
@@ -31,7 +31,7 @@
           </div>
           <div class="sign-input-box sign-password">
             <label class="sign-input-label">비밀번호 확인</label>
-            <input class="sign-input" type = "password" name="passwordRepeat" id="passwordRepeat" />
+            <input class="sign-input" type = "password" name="passwordCheck" id="passwordCheck" />
             <p class="error-msg" id="pwdCheckerError"></p>
             <button class="eye-button" type="button" id="showPasswordCheck"></button>
           </div>
@@ -50,6 +50,6 @@
         </div>
       </div>
     </div>
-    <script src="signup.js"></script>
+    <script type="module" src="./signup.js"></script>
   </body>
 </html>
