refactor(mentor): 필요없는 속성 삭제 (input의 value)

--- a/signin.html
+++ b/signin.html
@@ -29,7 +29,7 @@
           <li class="email-input-wrapper">
             <label>
               이메일<br>
-              <input class="email-input error-border" value="" type="email">
+              <input class="email-input error-border" type="email">
             </label>
             <p class="error-msg email-blank-error">이메일을 입력해주세요</p>
             <p class="error-msg email-type-error hide">올바른 이메일 주소가 아닙니다.</p>
@@ -38,7 +38,7 @@
           <li class="pwd-input-wrapper">
             <label>
               비밀번호<br>
-              <input class="pwd-input error-border" value="" type="password">       
+              <input class="pwd-input error-border" type="password">       
             </label>
             <button class="pwd-eye-off">
               <img id="eyeOnOff" src="images/eye-off.svg" alt="eye-off">
