refactor(mentor): 최초 화면일때는 에러속성 없이 수정

--- a/signin.html
+++ b/signin.html
@@ -29,21 +29,21 @@
           <li class="email-input-wrapper">
             <label>
               이메일<br>
-              <input class="email-input error-border" type="email">
+              <input class="email-input" type="email">
             </label>
-            <p class="error-msg email-blank-error">이메일을 입력해주세요</p>
+            <p class="error-msg email-blank-error hide">이메일을 입력해주세요</p>
             <p class="error-msg email-type-error hide">올바른 이메일 주소가 아닙니다.</p>
             <p class="error-msg check-email hide">이메일을 확인해주세요</p>
           </li>
           <li class="pwd-input-wrapper">
             <label>
               비밀번호<br>
-              <input class="pwd-input error-border" type="password">       
+              <input class="pwd-input" type="password">       
             </label>
             <button class="pwd-eye-off">
               <img id="eyeOnOff" src="images/eye-off.svg" alt="eye-off">
             </button>
-            <p class="error-msg pwd-blank-error">비밀번호를 입력해주세요</p>
+            <p class="error-msg pwd-blank-error hide">비밀번호를 입력해주세요</p>
             <p class="error-msg check-pwd hide">비밀번호를 확인해주세요</p>
           </li>
         </ol>
