--- a/index.html
+++ b/index.html
@@ -3,15 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <meta property="og:image" content="/images/_img4.png">
+  <!-- HTML 메타태그-->
+  <title>Linkbrary</title>
+  <meta name="description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요.">
+  
+  <!-- 페이스북 메타태그 -->
+  <meta property="og:url" content="https://linkbrary-hakyoung.netlify.app/">
+  <meta property="og:type" content="website">
   <meta property="og:title" content="Linkbrary">
   <meta property="og:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요.">
-  <meta property="og:url" content="https://linkbrary-hakyoung.netlify.app/">
+  <meta property="og:image" content="https://linkbrary-hakyoung.netlify.app/images/_img4.png">
+  
+  <!-- 트위터 메타태그 -->
   <meta name="twitter:card" content="summary_large_image">
-  <meta name="twitter:image" content="/images/_img4.png">
+  <meta property="twitter:domain" content="linkbrary-hakyoung.netlify.app">
+  <meta property="twitter:url" content="https://linkbrary-hakyoung.netlify.app/">
   <meta name="twitter:title" content="Linkbrary">
   <meta name="twitter:description" content="세상의 모든 정보를 쉽게 저장하고 관리해 보세요.">
-  <title>Linkbrary</title>
+  <meta name="twitter:image" content="https://linkbrary-hakyoung.netlify.app/images/_img4.png">
+  
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -19,7 +29,7 @@
   <link rel="stylesheet" href="/css/pages/main.css">
 </head>
 <body>
-  <header>
+  <header class="linkbrary-header">
     <nav class="linkbrary-nav">
       <ul>
         <li><a href="/"><img src="/icons/logo.svg" class="linkbrary-nav__logo" alt="링크브러리 로고"></a></li>
