--- a/signin.html
+++ b/signin.html
@@ -3,7 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- HTML 메타태그 -->
   <title>로그인</title>
+  <meta name="description" content="링크브러리 로그인">
+  
+  <!-- 페이스북 메타태그 -->
+  <meta property="og:url" content="https://linkbrary-hakyoung.netlify.app/signin">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="로그인">
+  <meta property="og:description" content="링크브러리 로그인">
+  <meta property="og:image" content="https://linkbrary-hakyoung.netlify.app/images/_img4.png">
+  
+  <!-- 트위터 메타태그 -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="linkbrary-hakyoung.netlify.app">
+  <meta property="twitter:url" content="https://linkbrary-hakyoung.netlify.app/signin">
+  <meta name="twitter:title" content="로그인">
+  <meta name="twitter:description" content="링크브러리 로그인">
+  <meta name="twitter:image" content="https://linkbrary-hakyoung.netlify.app/images/_img4.png">
+  
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
   <link rel="stylesheet" href="/css/pages/auth.css">
 </head>
@@ -20,20 +38,20 @@
             <div class="auth-form__input-group">
               <label for="email">이메일</label>
               <input id="email" name="email" type="email">
-              <div class="auth-form__wrong-email"></div>
+              <div id="auth-form__wrong-email"></div>
             </div>
             <div class="auth-form__input-group">
               <label for="password">비밀번호</label>  
               <div class="auth-form__password-input">
                 <input id="password" name="password" type="password">
-                <button class="auth-form__password-toggle-btn">
+                <button class="auth-form__password-toggle-btn" type="button">
                   <img src="/icons/eye-off.svg" class="auth-form__password-icon" alt="비밀번호 보기">
                 </button>
-              <div class="auth-form__wrong-password"></div>
+              <div id="auth-form__password-error"></div>
               </div>
             </div>
           </div>
-          <button class="auth-form__auth-btn" type="submit">로그인</button>
+          <button class="auth-form__submit-btn" type="submit">로그인</button>
         </form>
       </div>
       <div class="social-auth">
@@ -54,7 +72,7 @@
         </div>
       </div>
     </div>
-    <script src="/js/auth.js"></script>
+    <script src="/js/auth.js" type="module"></script>
   </main>
 </body>
 </html>
