--- a/signup.html
+++ b/signup.html
@@ -3,7 +3,25 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- HTML 메타태그 -->
   <title>회원가입</title>
+  <meta name="description" content="링크브러리 회원가입">
+  
+  <!-- Facebook 메타태그 -->
+  <meta property="og:url" content="https://linkbrary-hakyoung.netlify.app/signup">
+  <meta property="og:type" content="website">
+  <meta property="og:title" content="회원가입">
+  <meta property="og:description" content="링크브러리 회원가입">
+  <meta property="og:image" content="https://linkbrary-hakyoung.netlify.app/images/_img4.png">
+  
+  <!-- Twitter 메타태그 -->
+  <meta name="twitter:card" content="summary_large_image">
+  <meta property="twitter:domain" content="linkbrary-hakyoung.netlify.app">
+  <meta property="twitter:url" content="https://linkbrary-hakyoung.netlify.app/signup">
+  <meta name="twitter:title" content="회원가입">
+  <meta name="twitter:description" content="링크브러리 회원가입">
+  <meta property="og:image" content="https://linkbrary-hakyoung.netlify.app/images/_img4.png">
+  
   <link rel="stylesheet" type="text/css" href="https://cdn.jsdelivr.net/gh/orioncactus/pretendard/dist/web/static/pretendard.css" />
   <link rel="stylesheet" href="/css/pages/auth.css">
 </head>
@@ -36,14 +54,14 @@
               <label for="confirm-password">비밀번호 확인</label>
               <div class="auth-form__password-input">
                 <input id="confirm-password" name="confirm_password" type="password">
-                <button class="auth-form__password-toggle-btn confirm">
+                <button class="auth-form__password-toggle-btn confirm" type="button">
                   <img src="/icons/eye-off.svg" class="auth-form__password-icon confirm" alt="비밀번호 보기">
                 </button>
                 <div class="auth-form__wrong-password confirm"></div>
               </div>
             </div>
           </div>
-          <button class="auth-form__auth-btn" type="submit">회원가입</button>
+          <button class="auth-form__submit-btn" type="submit">회원가입</button>
         </form>
       </div>
       <div class="social-auth">
