refactor(mentor): 코드 스타일 통일-onclick이벤트 이벤트 핸들러로 이용

--- a/signin.html
+++ b/signin.html
@@ -32,8 +32,6 @@
               <input class="email-input" type="email">
             </label>
             <p class="error-msg email-error hide"></p>
-            <!-- <p class="error-msg email-type-error hide">올바른 이메일 주소가 아닙니다.</p>
-            <p class="error-msg check-email hide">이메일을 확인해주세요</p> -->
           </li>
           <li class="pwd-input-wrapper">
             <label>
@@ -48,7 +46,7 @@
         </ol>
       </form>
     </div>
-    <button class="button-sign" onclick="loginCheck()"> 로그인 </button>
+    <button class="button-sign"> 로그인 </button>
     <div class="social-login">
       <p>소셜 로그인</p>
       <div class="social-icon">
